# projectparser

./: Makefile.am  configure.ac  projectparser.anjuta
libanjuta/: Makefile.am  anjuta-debug.c  anjuta-debug.h  anjuta-project.c  anjuta-project.h  anjuta-token-file.c  anjuta-token-file.h  anjuta-token-group.c  anjuta-token-group.h  anjuta-token-list.c  anjuta-token-list.h  anjuta-token-old.c  anjuta-token-old.h  anjuta-token-stream.c  anjuta-token-stream.h  anjuta-token-style.c  anjuta-token-style.h  anjuta-token.c  anjuta-token.h  gbf-project.c
libanjuta/interfaces/: ianjuta-project.c  ianjuta-project.h  libanjuta-iface-marshallers.c  libanjuta-iface-marshallers.h
po/: POTFILES.in
src/: Makefile.am  ac-parser.y  ac-scanner.h  ac-scanner.l  ac-writer.c  am-dialog.c  am-dialog.h  am-dialogs.c  am-parser.y  am-project-private.h  am-project.c  am-project.h  am-scanner.h  am-scanner.l  am-writer.c  am-writer.h  gbf-am-project.c  gbf-am-project.h  gbf-mk-project.c  gbf-mk-project.h  main.c  mk-parser.y  mk-project-private.h  mk-project.c  mk-project.h  mk-rule.c  mk-rule.h  mk-scanner.h  mk-scanner.l  project.c  project.h  tokens.c  tokens.h
test/anjuta/: configure.in~
tests/: Makefile.am  acinit.at  anjuta.at  anjuta.lst  empty.lst  empty2.lst  empty3.lst  group.at  local.at  makefile.at  makefile.lst  parser.lst  target.at  test0.sh.in  test1.sh.in  test2.sh.in  test3.sh.in  test4.sh.in  test5.sh.in  test6.sh.in  testsuite.at
tests/anjuta/: configure.in  configure.in~
tests/anjuta/libanjuta/interfaces/: Makefile.am
tests/anjuta/plugins/build-file/: Makefile.am
tests/anjuta/po/: Makefile.in
tests/empty/: configure.ac  configure.ac~
tests/makefile/: Makefile
tests/parser/: configure.ac
