
dist_check_SCRIPTS = test0.sh \
		     test1.sh \
		     test2.sh \
		     test3.sh \
		     test4.sh \
		     test5.sh \
		     test6.sh

TESTS = $(dist_check_SCRIPTS)

EXTRA_DIST = \
	empty/configure.ac \
	empty/Makefile.am \
	empty.lst \
	anjuta/configure.ac \
	anjuta.lst \
	parser/configure.ac \
	parser/Makefile.am \
	parser.lst \
	makefile/Makefile \
	makefile.lst

-include $(top_srcdir)/git.mk
